// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`HotelsReducer setSearch it should update filters for list of hotels 1`] = `
Object {
  "cityId": null,
  "filterParams": Object {
    "freeCancellation": false,
    "maxPrice": 30,
    "minPrice": 20,
    "starsRating": Array [],
  },
  "location": "",
  "searchParams": Object {
    "checkin": null,
    "checkout": null,
    "roomsConfiguration": Object {
      "adultsCount": 1,
      "children": Array [],
    },
  },
}
`;

exports[`HotelsReducer setSearch it should update search filters for list of hotels 1`] = `
Object {
  "cityId": null,
  "filterParams": Object {
    "freeCancellation": false,
    "maxPrice": null,
    "minPrice": null,
    "starsRating": Array [],
  },
  "location": "",
  "searchParams": Object {
    "checkin": 1970-01-01T00:00:00.001Z,
    "checkout": null,
    "roomsConfiguration": Object {
      "adultsCount": 1,
      "children": Array [],
    },
  },
}
`;
